// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SmsIntegrationPreferences/> render() should render 1`] = `
<div
  class="pageContainer container-fluid"
>
  <div
    class="row"
  >
    <div
      class="col-lg-6 col-xl-7"
    >
      <form
        class=""
      >
        <div
          class="row"
        >
          <div
            class="col"
          >
            <div
              class="form-group"
            >
              <label
                class="control-label"
                for="title"
              >
                Integration title
              </label>
              <div
                class="container"
              >
                <span
                  class="inputGroup wrapper group horizontal"
                >
                  <div
                    class="picker emojiPicker"
                  >
                    <span
                      class="material-icons empty icon"
                    >
                      insert_emoticon
                    </span>
                  </div>
                  <div
                    class="wrapper right isNested"
                  >
                    <input
                      class="input"
                      id="title"
                      name="title"
                      placeholder="Ex: Company Support Line"
                      required=""
                      tabindex="0"
                      type="text"
                      value="My new SMS Integration"
                    />
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-4 mb-5 row"
        >
          <div
            class="col"
          >
            <h4
              class="mb-3"
            >
              Phone number
            </h4>
            <div
              class="appRow ml-1 mr-1 row"
            >
              <div
                class="pl-0 col-lg-8"
              >
                <div
                  class="wrapper"
                >
                  <div
                    class="wrapper"
                  >
                    <span
                      role="img"
                      style="display: inline-block; font-size: 1em; line-height: 1em; vertical-align: middle;"
                    >
                      🇺🇸
                    </span>
                  </div>
                  <strong>
                    A Phone Number
                  </strong>
                   
                  <span />
                </div>
              </div>
              <div
                class="appLink col-lg-4"
              >
                <a
                  to="/app/settings/phone-numbers/1"
                >
                  Manage Phone Number
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-5"
        >
          <button
            aria-disabled="false"
            class="wrapper fill primary medium"
            type="submit"
          >
            <span
              class="content"
            >
              Save changes
            </span>
          </button>
          <button
            aria-disabled="false"
            class="wrapper float-right fill destructive medium"
            id="delete-integration"
            type="button"
          >
            <span
              class="content"
            >
              <span
                class="wrapper"
              >
                <i
                  class="material-icons icon isLeft medium"
                >
                  delete
                </i>
                Delete integration
              </span>
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`<SmsIntegrationPreferences/> render() should submit a valid payload with the selected phone_number_id 1`] = `
<div
  class="pageContainer container-fluid"
>
  <div
    class="row"
  >
    <div
      class="col-lg-6 col-xl-7"
    >
      <form
        class=""
      >
        <div
          class="row"
        >
          <div
            class="col"
          >
            <div
              class="form-group"
            >
              <label
                class="control-label"
                for="title"
              >
                Integration title
              </label>
              <div
                class="container"
              >
                <span
                  class="inputGroup wrapper group horizontal"
                >
                  <div
                    class="picker emojiPicker"
                  >
                    <span
                      class="material-icons empty icon"
                    >
                      insert_emoticon
                    </span>
                  </div>
                  <div
                    class="wrapper right isNested"
                  >
                    <input
                      class="input"
                      id="title"
                      name="title"
                      placeholder="Ex: Company Support Line"
                      required=""
                      tabindex="0"
                      type="text"
                      value="My updated SMS integration"
                    />
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-4 mb-5 row"
        >
          <div
            class="col"
          >
            <h4
              class="mb-3"
            >
              Phone number
            </h4>
            <div
              class="appRow ml-1 mr-1 row"
            >
              <div
                class="pl-0 col-lg-8"
              >
                <div
                  class="wrapper"
                >
                  <div
                    class="wrapper"
                  >
                    <span
                      role="img"
                      style="display: inline-block; font-size: 1em; line-height: 1em; vertical-align: middle;"
                    >
                      🇺🇸
                    </span>
                  </div>
                  <strong>
                    A Phone Number
                  </strong>
                   
                  <span />
                </div>
              </div>
              <div
                class="appLink col-lg-4"
              >
                <a
                  to="/app/settings/phone-numbers/1"
                >
                  Manage Phone Number
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-5"
        >
          <button
            aria-disabled="true"
            class="wrapper fill primary medium isDisabled"
            type="button"
          >
            <svg
              class="LoadingSpinner--spinner--a8Lrf LoadingSpinner--gloom--BV3WA spinner"
              height="22"
              preserveAspectRatio="xMidYMid meet"
              role="status"
              viewBox="0 0 20 20"
              width="22"
            >
              <circle
                class="LoadingSpinner--dot--tnzt_"
                cx="10"
                cy="10"
                fill="none"
                r="6"
                stroke-width="2"
              />
              <circle
                class="LoadingSpinner--circle--OnNzl"
                cx="10"
                cy="10"
                fill="none"
                r="6"
                stroke-width="2"
              />
              <span
                class="sr-only"
              >
                Loading...
              </span>
            </svg>
            <span
              class="content"
            >
              Save changes
            </span>
          </button>
          <button
            aria-disabled="false"
            class="wrapper float-right fill destructive medium"
            id="delete-integration"
            type="button"
          >
            <span
              class="content"
            >
              <span
                class="wrapper"
              >
                <i
                  class="material-icons icon isLeft medium"
                >
                  delete
                </i>
                Delete integration
              </span>
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;
